# Availabillity-Scanner

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LocationData.js  README.md  licensingLocations.json
src/: bin.rs
src/dmv_api/: client.rs  lib.rs  sms.rs  structs.rs  utils.rs
